--- a/locales/en.yml
+++ b/locales/en.yml
@@ -1,3 +1,4 @@
 order_confirmation:
   iftext: "Thank you for your order. From our New York City atelier to your closet &#8211; your order will arrive shortly. We will send you another email once your package ships."
-  utm_campaign: "order-confirmation-email"
+draft_order_invoice:
+  iftext: "We have reserved the following items for you from Adam Lippes."
