--- a/locales/ja.yml
+++ b/locales/ja.yml
@@ -10,3 +10,5 @@ order_refund:
   iftext: "This is a confirmation that we have processed your refund."
 order_shipping_refund:
   iftext: "このたびはご注文いただき、誠にありがとうございます。ご注文の商品を発送いたしましたのでお知らせいたします。"
+payment_error:
+  iftext: "You added items to your shopping cart but the payment couldn&#8217;t be processed. You haven&#8217;t been charged."
